--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*node_modules/*
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -37,4 +37,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+server/angstronomers.sqlite3
+
+*__pycache__/
 server/angstronomers.sqlite3
